# corpust

./: .gitignore  .gitignore.tmp  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  data.ts  index.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: .gitkeep  icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs
app/src/components/analyses/: CollocationsView.tsx  CorpusDetail.tsx  FrequencyView.tsx  Onboarding.tsx  SettingsView.tsx
app/src/components/chrome/: Sidebar.tsx  StatusBar.tsx  TitleStrip.test.tsx  TitleStrip.tsx  ViewTabs.test.tsx  ViewTabs.tsx  Wordmark.test.tsx  Wordmark.tsx
app/src/components/corpora/: CorpusList.tsx
app/src/components/kwic/: ContextDrawer.tsx  HitDensityGutter.test.tsx  HitDensityGutter.tsx  KwicTable.tsx
app/src/components/layout/: Sidebar.tsx
app/src/components/overlays/: BuildDialog.tsx  CommandPalette.tsx
app/src/components/query/: QueryBar.tsx
app/src/components/results/: KwicTable.tsx
app/src/components/ui/: button.test.tsx  button.tsx  card.test.tsx  card.tsx  input.test.tsx  input.tsx  separator.test.tsx  separator.tsx
app/src/lib/: tauri.test.ts  tauri.ts  utils.test.ts  utils.ts
crates/corpust-annotate/: Cargo.toml
crates/corpust-annotate/src/: lib.rs  treetagger.rs
crates/corpust-cli/: Cargo.toml
crates/corpust-cli/src/: main.rs
crates/corpust-cli/tests/: cli.rs
crates/corpust-core/: Cargo.toml
crates/corpust-core/src/: lib.rs
crates/corpust-index/: Cargo.toml
crates/corpust-index/src/: lib.rs
crates/corpust-io/: Cargo.toml
crates/corpust-io/src/: lib.rs  metadata.rs  paths.rs
crates/corpust-query/: Cargo.toml
crates/corpust-query/src/: lib.rs
crates/corpust-tagger/: Cargo.toml
crates/corpust-tagger/src/: lib.rs  testkit.rs  viterbi.rs
crates/corpust-tagger/src/par/: dtree.rs  header.rs  lexicon.rs  mod.rs  tries.rs
crates/corpust-tokenize/: Cargo.toml
crates/corpust-tokenize/src/: lib.rs  treetagger.rs
resources/treetagger/: README.md
scripts/: fetch_gutenberg.py
testdata/: sample.txt  sample2.txt
