[workspace]
resolver = "3"
members = [
    "crates/corpust-core",
    "crates/corpust-tokenize",
    "crates/corpust-io",
    "crates/corpust-annotate",
    "crates/corpust-tagger",
    "crates/corpust-index",
    "crates/corpust-query",
    "crates/corpust-cli",
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MartyJRE/corpust"
authors = ["Martin Pražák"]

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
corpust-core = { path = "crates/corpust-core" }
corpust-tokenize = { path = "crates/corpust-tokenize" }
corpust-io = { path = "crates/corpust-io" }
corpust-annotate = { path = "crates/corpust-annotate" }
corpust-tagger = { path = "crates/corpust-tagger" }
corpust-index = { path = "crates/corpust-index" }
corpust-query = { path = "crates/corpust-query" }

anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26"
unicode-segmentation = "1.12"
walkdir = "2.5"
