[package]
name = "corpust-annotate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Corpust: POS / lemma annotation pipeline."

[dependencies]
corpust-core.workspace = true
corpust-tokenize.workspace = true
anyhow.workspace = true
unicode-segmentation.workspace = true
