[package]
name = "corpust-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Corpust: command-line interface."

[[bin]]
name = "corpust"
path = "src/main.rs"

[dependencies]
corpust-core.workspace = true
corpust-io.workspace = true
corpust-index.workspace = true
corpust-query.workspace = true
corpust-annotate.workspace = true
corpust-tagger.workspace = true
anyhow.workspace = true
clap.workspace = true
flate2 = "1"
tar = "0.4"
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
