[package]
name = "corpust-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Corpust: corpus ingestion."

[dependencies]
corpust-core.workspace = true
anyhow.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
