[package]
name = "corpust-tagger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Corpust: pure-Rust POS / lemma tagger reading TreeTagger .par files."

[features]
# Heavy oracle-comparison + accuracy-sweep tests. Off by default —
# requires running the TreeTagger subprocess and large external corpora
# (Gutenberg, UNSC). Enabled when iterating on tagger accuracy locally.
diagnostics = []

[dependencies]
corpust-core.workspace = true
corpust-annotate.workspace = true
corpust-tokenize.workspace = true
anyhow.workspace = true

[[bin]]
name = "par-explore"
path = "src/bin/par_explore.rs"
